--- a/0_review_examples.html
+++ b/0_review_examples.html
@@ -9,7 +9,25 @@
     <div border="1"></div>
 
     <div style="border:solid 1px">
+      <p>Review visuals and previous class materials to establish base</p>
+      <ul>
+        <li>HTML History to Where We Are Now</li>
+        <li>HTML4 vs HTML 5</li>
+        <li>HTML5 Semantics</li>
+        <li>HTML5 Forms</li>
+        <li>HTML5 Audio/Video</li>
+        <li>CSS3</li>
+        <li>CSS3 Features</li>
+        <li>Advanced - CSS3 Relational Selectors (Combinators)</li>
+        <ul>
+          <li><a href="https://learn.shayhowe.com/advanced-html-css/complex-selectors/">1</a></li>
+          <li><a href="https://developer.mozilla.org/en-US/docs/Learn/CSS/Building_blocks/Selectors/Combinators">1</a></li>
+          <li><a href="https://www.websitenero.com/application/content/css-module/css-selectors/relational-selectors.html">2</a>     </li>
+        </ul>
+        <li>Learning Code Context</li>
+        <li>Learning Code Methodology</li>
 
+      </ul>
     </div>
 
   </body>
@@ -18,6 +36,10 @@
 
 <!--
 Notable sites:
+
+
+
+
 http://jessdesigntan.com/
 https://www.awwwards.com/
  -->
